[package]
name = "egui_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.27.2", features = ["default"]}
egui = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"
nvml-wrapper = "0.10.0"