[package]
name = "GPU_Stats"
version = "0.1.0"
edition = "2021"    

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.27.2", features = ["default"]}
egui_extras = "0.27.2"
env_logger = "0.11.3"
nvml-wrapper = "0.10.0"
emath = "0.13.0"
epaint = "0.27.2"
egui-winit = "0.27.2"
egui_plot = "0.27.2"
ecolor = "0.27.2"
egui_gauge = { git = "https://github.com/bobbobbio/egui_gauge" }